поправила комментарии ревью

--- a/index.html
+++ b/index.html
@@ -241,5 +241,9 @@
     </li>
   </template>
 
+  <template id="comments-loader">
+    <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
+  </template>
+
 </body>
 </html>
