--- a/index.html
+++ b/index.html
@@ -250,5 +250,9 @@
     <button type="button" class="social__comments-loader  comments-loader">Загрузить еще</button>
   </template>
 
+  <template id="fetch-error">
+    <div class="fetch-error"></div>
+  </template>
+
 </body>
 </html>
